--- a/src/css/signin.css
+++ b/src/css/signin.css
@@ -1,9 +1,16 @@
 .app__signin-overlay {
+  position: absolute;
   height: 100%;
+  width: 100%;
+  left: 0;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: 1;
 }
 
 .app__signin-root {
   display: flex;
+  position: relative;
   flex-direction: column;
   position: relative;
   top: calc(50% - 125px);
@@ -15,6 +22,7 @@
   border: 1px solid var(--secondary-1-3);
   border-radius: var(--base-border-radius);
   box-shadow: var(--box-shadow);
+  z-index: 0;
 }
 
 .app__signin-header {
