--- a/src/css/game.css
+++ b/src/css/game.css
@@ -28,7 +28,7 @@
   height: 100%;
   display: grid;
   grid-template-rows: 1fr 128px 96px 128px 1fr;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr max-content 1fr;
   grid-template-areas:
     "upperSpacer upperSpacer upperSpacer"
     ". upper ."
@@ -58,9 +58,68 @@
 
 .app__game__main__table {
   grid-area: table;
+  display: flex;
   border-radius: 92px;
-  border: 2px solid var(--secondary-1-3);
+  border: 2px solid var(--primary-3);
+  background-color: var(--secondary-1-2);
   height: 92px;
+  min-width: 256px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.app__game__main__game-management-button--waiting {
+  flex: 0 1 auto;
+  border: 1px solid var(--primary-4);
+  border-radius: var(--base-border-radius);
+  background-color: var(--primary-0);
+
+  padding: var(--space-base) var(--space-large);
+}
+
+.app__game__main__game-management-button--show-down {
+  flex: 0 1 auto;
+  outline: none;
+  border: 1px solid var(--primary-4);
+  border-radius: var(--base-border-radius);
+  background-color: var(--secondary-2-1);
+  color: var(--secondary-2-4);
+  padding: var(--space-base) var(--space-large);
+  cursor: pointer;
+
+  transition: color 0.2s ease-out, background-color 0.2s ease-out, box-shadow 0.2s ease-out;
+
+  &:active {
+    box-shadow: var(--box-shadow);
+  }
+
+  &:hover {
+    color: var(--secondary-2-1);
+    background-color: var(--secondary-2-3);
+  }
+}
+
+.app__game__main__game-management-button--next-game {
+  flex: 0 1 auto;
+  outline: none;
+  border: 1px solid var(--primary-4);
+  border-radius: var(--base-border-radius);
+  background-color: var(--primary-1);
+  color: var(--primary-4);
+  padding: var(--space-base) var(--space-large);
+  cursor: pointer;
+
+  transition: color 0.2s ease-out, background-color 0.2s ease-out;
+
+  &:active {
+    box-shadow: var(--box-shadow);
+  }
+
+  &:hover {
+    color: var(--primary-1);
+    background-color: var(--primary-4);
+  }
 }
 
 .app__game__card-holder {
@@ -81,6 +140,9 @@
   color: var(--primary-4);
   text-align: center;
   justify-content: center;
+  margin: var(--space-base);
+
+  transition: transform 100ms ease-out;
 
   &:first-of-type {
     margin-left: 0;
@@ -90,11 +152,14 @@
     margin-right: 0;
   }
 
-  margin: var(--space-base);
+  &:hover {
+    transform: translateY(calc(-1 * var(--space-base)));
+  }
 
   &.app__game__selectable-card--selected {
     background-color: var(--primary-3);
     color: var(--secondary-1-1);
+    transform: translateY(calc(-1 * var(--space-base)));
   }
 }
 
