--- a/src/css/game.css
+++ b/src/css/game.css
@@ -198,6 +198,8 @@
   display: flex;
   justify-content: center;
   padding: var(--space-base) var(--space-large);
+  height: 144px;
+  align-items: flex-end;
 }
 
 .app__game__selectable-card {
@@ -274,7 +276,8 @@
   justify-content: center;
   padding: var(--space-base) var(--space-large);
   position: relative;
-  top: -48px;
+  height: 144px;
+  align-items: center;
 }
 
 .app__game__average-point-showcase__results {
@@ -289,7 +292,7 @@
   align-items: center;
   background-color: var(--primary-3);
   border-radius: var(--base-border-radius);
-  padding: 0 var(--space-large);
+  padding: var(--space-large);
 }
 
 .app__game__average-point-showcase__equal {
