--- a/src/css/signin.css
+++ b/src/css/signin.css
@@ -17,12 +17,12 @@
   display: flex;
   position: relative;
   flex-direction: column;
-  position: relative;
   top: calc(50% - 125px);
   min-width: 250px;
   max-width: 50%;
   height: 250px;
   margin: auto;
+
   /* border */
   border: 1px solid var(--secondary-1-3);
   border-radius: var(--base-border-radius);
@@ -37,6 +37,7 @@
   font-weight: bold;
   border-radius: var(--base-border-radius) var(--base-border-radius) 0 0;
 
+  /* colors */
   background-color: var(--primary-3);
   color: var(--secondary-1-1);
 }
@@ -68,8 +69,30 @@
   font-size: var(--large-font-size);
   font-weight: bold;
   border-radius: 0 0 var(--base-border-radius) var(--base-border-radius);
+  text-align: right;
 
+  /* colors */
   background-color: var(--primary-3);
   color: var(--secondary-1-1);
-  text-align: right;
+}
+
+.app__signin__submit {
+  flex: 0 1 auto;
+  outline: none;
+  border: 1px solid var(--secondary-1-4);
+  border-radius: var(--base-border-radius);
+  background-color: var(--secondary-1-1);
+  color: var(--secondary-1-4);
+  padding: var(--space-base) var(--space-large);
+  cursor: pointer;
+  transition: color 0.2s ease, background-color 0.2s ease, box-shadow 0.2s ease;
+
+  &:active {
+    box-shadow: var(--box-shadow);
+  }
+
+  &:hover {
+    color: var(--secondary-1-1);
+    background-color: var(--secondary-1-4);
+  }
 }
