--- a/src/css/user-info.css
+++ b/src/css/user-info.css
@@ -1,87 +1,46 @@
 .app__game__user-info {
   display: flex;
-  flex-direction: column;
-  position: absolute;
-  top: var(--space-large);
-  right: var(--space-large);
+  position: relative;
+  align-items: center;
+  padding: var(--space-base) 0;
+  border-bottom: 1px solid transparent;
+  transition: border-color 0.2s ease;
 
-  border: 1px solid var(--secondary-1-4);
-  border-radius: var(--base-border-radius);
-  padding: var(--space-large);
-}
-
-/* applyer */
-.app__game__user-info__applyer {
-  text-align: right;
-  margin-top: var(--space-large);
-}
-
-.app__game__user-info__name-editor__submit {
-  border-radius: var(--base-border-radius);
-  border: 1px solid var(--secondary-1-3);
-  background-color: var(--secondary-1-2);
-  padding: var(--space-base) var(--space-large);
-  cursor: pointer;
-
-  transition: border-color 0.1s ease-out, background-color 0.1s ease-out, box-shadow 0.1s ease-out;
-
-  &[disabled] {
-    background-color: var(--secondary-1-1);
-    border-color: var(--secondar-1-2);
-    cursor: default;
+  &:hover {
+    border-color: var(--secondary-1-4);
   }
 }
 
-.app__game__user-info__name-viewer {
-  display: flex;
-  flex: 1 1 auto;
-  flex-direction: column;
-  border: 1px solid var(--secondary-1-4);
-}
-
-.app__game__user-info__name-viewer__label {
+.app__game__user-info__icon {
+  display: inline-block;
   flex: 0 0 auto;
-  text-align: center;
-  width: 96px;
-  padding: var(--space-base) var(--space-large);
+  mask: url(/static/svg/user.svg);
+  mask-size: cover;
+  width: 1.5rem;
+  height: 1.5rem;
   background-color: var(--secondary-1-4);
-  color: var(--secondary-1-1);
+  margin-right: var(--space-base);
 }
 
-.app__game__user-info__name-viewer__name {
+.app__game__user-info__name {
+  display: inline-block;
   flex: 1 1 auto;
-  width: calc(196px - (var(--space-large) * 2));
-  margin: var(--space-base) var(--space-large);
+  width: 128px;
+  text-overflow: ellipsis;
+  color: var(--primary-4);
 }
 
-/* name-editor */
-
-.app__game__user-info__name-editor {
-  display: flex;
-  flex: 1 1 auto;
-  flex-direction: column;
-  border: 1px solid var(--secondary-1-4);
-}
-
-.app__game__user-info__name-editor__label {
+.app__game__user-info__indicator {
+  display: inline-block;
   flex: 0 0 auto;
-  text-align: center;
-  width: 96px;
-  padding: var(--space-base) var(--space-large);
-  background-color: var(--secondary-1-4);
-  color: var(--secondary-1-1);
-}
+  mask: url(/static/svg/arrow-down.svg);
+  mask-size: cover;
+  width: 1rem;
+  height: 1rem;
+  background-color: var(--primary-4);
+  transition: transform 0.2s ease;
 
-.app__game__user-info__name-editor__input {
-  flex: 1 1 auto;
-  width: calc(196px - (var(--space-large) * 2));
-  margin: var(--space-base) var(--space-large);
-  outline: none;
-  border: none;
-  border-bottom: 1px dashed var(--secondary-1-3);
-  padding: 0;
-
-  &:focus {
-    border-bottom: 1px solid var(--secondary-1-3);
+  &.app__game__user-info__indicator--opened {
+    transform: rotateZ(180deg);
   }
 }
