--- a/src/css/user-info-updater.css
+++ b/src/css/user-info-updater.css
@@ -62,3 +62,80 @@
     border-bottom: 1px solid var(--secondary-1-3);
   }
 }
+
+/* mode-changer */
+
+.app__game__user-info-updater__mode-changer {
+  display: flex;
+  flex: 1 1 auto;
+  flex-direction: column;
+  border: 1px solid var(--secondary-1-4);
+}
+
+.app__game__user-info-updater__mode-changer__label {
+  flex: 0 0 auto;
+  text-align: center;
+  padding: var(--space-base) var(--space-large);
+  background-color: var(--secondary-1-4);
+  color: var(--secondary-1-1);
+}
+
+.app__game__user-info-updater__mode-changer__switch-container {
+  display: flex;
+  flex: 1 1 auto;
+  width: calc(196px - (var(--space-large) * 2));
+  margin: var(--space-base) var(--space-large);
+  outline: none;
+  border: none;
+  padding: 0;
+}
+
+.app__game__user-info-updater__mode-changer__switch-label {
+  flex: 1 1 auto;
+  color: var(--primary-4);
+  text-align: center;
+}
+
+.app__game__user-info-updater__mode-changer__switch {
+  flex: 0 0 auto;
+  position: relative;
+  display: inline-block;
+  background-color: transparent;
+  width: 32px;
+  max-width: 32px;
+  height: 20px;
+}
+
+.app__game__user-info-updater__mode-changer__switch__rail {
+  position: relative;
+  display: inline-block;
+  margin: 0;
+  padding: 0 4px;
+  background-color: var(--secondary-1-2);
+  width: 100%;
+  height: 100%;
+  transition: background-color ease-out 100ms;
+
+  &.app__game__user-info-updater__mode-changer__switch__rail--checked {
+    background-color: var(--secondary-1-3);
+  }
+}
+
+.app__game__user-info-updater__mode-changer__switch__box {
+  position: absolute;
+  display: inline-block;
+  background-color: var(--primary-3);
+  height: 100%;
+  width: 16px;
+  left: 0;
+  top: 0;
+  transition: transform ease-out 100ms;
+
+  &.app__game__user-info-updater__mode-changer__switch__box--checked {
+    transform: translateX(calc(32px - 16px + 8px));
+  }
+}
+
+.app__game__user-info-updater__mode-changer__switch__input {
+  display: none;
+}
