feat: add css for invitation

--- a/src/css/root.css
+++ b/src/css/root.css
@@ -7,3 +7,4 @@
 @import "./user-info.css";
 @import "./user-info-updater.css";
 @import "./invitation-link-viewer.css";
+@import "./invitation.css";
