feat: show game selector

--- a/src/css/root.css
+++ b/src/css/root.css
@@ -3,6 +3,7 @@
 @import "./app.css";
 @import "./signin.css";
 @import "./game-creator.css";
+@import "./game-selector.css";
 @import "./game.css";
 @import "./user-info.css";
 @import "./user-info-updater.css";
