--- a/src/css/root.css
+++ b/src/css/root.css
@@ -7,5 +7,5 @@
 @import "./game.css";
 @import "./user-info.css";
 @import "./user-info-updater.css";
-@import "./invitation-link-viewer.css";
 @import "./invitation.css";
+@import "./game-settings.css";
