--- a/src/css/game-selector.css
+++ b/src/css/game-selector.css
@@ -7,11 +7,12 @@
   max-width: 50%;
   height: 250px;
   margin: auto;
+  box-shadow: var(--box-shadow);
+  z-index: 0;
+
   /* border */
   border: 1px solid var(--secondary-1-3);
   border-radius: var(--base-border-radius);
-  box-shadow: var(--box-shadow);
-  z-index: 0;
 }
 
 .app__game-selector__header {
@@ -66,6 +67,7 @@
   font-weight: bold;
   border-radius: 0 0 var(--base-border-radius) var(--base-border-radius);
 
+  /* colors */
   background-color: var(--primary-3);
   color: var(--secondary-1-1);
 }
