--- a/src/css/invitation.css
+++ b/src/css/invitation.css
@@ -10,7 +10,7 @@
 .app__invitation__overlay {
   position: absolute;
   z-index: 0;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0 0 0 20%);
   width: 100%;
   height: 100%;
 }
