--- a/src/css/user-info.css
+++ b/src/css/user-info.css
@@ -15,7 +15,7 @@
 .app__game__user-info__icon {
   display: inline-block;
   flex: 0 0 auto;
-  mask: url(/static/svg/user.svg);
+  mask: url("/static/svg/user.svg");
   mask-size: cover;
   width: 1.5rem;
   height: 1.5rem;
@@ -34,7 +34,7 @@
 .app__game__user-info__indicator {
   display: inline-block;
   flex: 0 0 auto;
-  mask: url(/static/svg/arrow-down.svg);
+  mask: url("/static/svg/arrow-down.svg");
   mask-size: cover;
   width: 1rem;
   height: 1rem;
