--- a/src/css/game-creator.css
+++ b/src/css/game-creator.css
@@ -4,7 +4,7 @@
   width: 100%;
   left: 0;
   top: 0;
-  background-color: rgba(0 0 0 30%);
+  background-color: rgba(0 0 0 / 30%);
   z-index: 1;
   visibility: hidden;
 }
