--- a/src/css/variable.css
+++ b/src/css/variable.css
@@ -2,29 +2,29 @@
   --base-font-size: 13.5px;
   --large-font-size: 16px;
   --base-border-radius: 4px;
-  --header-shadow: 0 7px 3px rgba(0 0 0 20%);
-  --box-shadow: 4px 4px 7px rgba(0 0 0 30%), -4px 0 7px rgba(0 0 0 30%);
+  --header-shadow: 0 7px 3px rgba(0 0 0 / 20%);
+  --box-shadow: 4px 4px 7px rgba(0 0 0 / 30%), -4px 0 7px rgba(0 0 0 / 30%);
   --space-large: 16px;
   --space-base: 8px;
   --space-small: 4px;
   --space-nano: 2px;
 
   /* colors */
-  --primary-0: rgba(109 142 148 100%);
-  --primary-1: rgba(208 219 221 100%);
-  --primary-2: rgba(155 178 183 100%);
-  --primary-3: rgba(74 117 125 100%);
-  --primary-4: rgba(46 95 104 100%);
-  --secondary-1-0: rgba(241 221 175 100%);
-  --secondary-1-1: rgba(255 251 240 100%);
-  --secondary-1-2: rgba(255 243 216 100%);
-  --secondary-1-3: rgba(204 179 119 100%);
-  --secondary-1-4: rgba(169 140 72 100%);
-  --secondary-2-0: rgba(241 178 175 100%);
-  --secondary-2-1: rgba(255 241 240 100%);
-  --secondary-2-2: rgba(255 218 216 100%);
-  --secondary-2-3: rgba(204 123 119 100%);
-  --secondary-2-4: rgba(169 77 72 100%);
+  --primary-0: rgb(109 142 148);
+  --primary-1: rgb(208 219 221);
+  --primary-2: rgb(155 178 183);
+  --primary-3: rgb(74 117 125);
+  --primary-4: rgb(46 95 104);
+  --secondary-1-0: rgb(241 221 175);
+  --secondary-1-1: rgb(255 251 240);
+  --secondary-1-2: rgb(255 243 216);
+  --secondary-1-3: rgb(204 179 119);
+  --secondary-1-4: rgb(169 140 72);
+  --secondary-2-0: rgb(241 178 175);
+  --secondary-2-1: rgb(255 241 240);
+  --secondary-2-2: rgb(255 218 216);
+  --secondary-2-3: rgb(204 123 119);
+  --secondary-2-4: rgb(169 77 72);
 
   /* component */
   --card-width: 48px;
