--- a/src/css/game.css
+++ b/src/css/game.css
@@ -276,10 +276,12 @@
   text-align: center;
   justify-content: center;
   margin: var(--space-base);
+  transition: transform 0.2s ease;
 
   &.app__game__main__player-card--handed {
     background-color: var(--primary-3);
     color: var(--secondary-1-1);
+    transform: rotateY(180deg);
   }
 }
 
