--- a/plop-templates/ui/package.json.hbs
+++ b/plop-templates/ui/package.json.hbs
@@ -1,5 +1,5 @@
 {
-  "name": "@spp/ui-icon",
+  "name": "@spp/ui-{{name}}",
   "version": "1.0.0",
   "description": "",
   "sideEffects": [
@@ -9,10 +9,10 @@
     "./dist/"
   ],
   "exports": {
-      ".": {
-          "import": "src/index.ts",
-          "require": "src/index.ts"
-      }
+    ".": {
+      "import": "src/index.ts",
+      "require": "src/index.ts"
+    }
   },
   "module": "./src/index.ts",
   "types": "./src/index.ts",
@@ -30,14 +30,16 @@
     "@spp/eslint-config": "workspace:^",
     "@spp/tailwind-config": "workspace:^",
     "@spp/typescript-config": "workspace:^",
+    "@spp/eslint-config": "workspace:^",
     "@storybook/addon-controls": "catalog:",
     "@storybook/cli": "catalog:",
     "@storybook/react": "catalog:",
     "@storybook/react-vite": "catalog:",
     "@testing-library/react": "catalog:",
     "@vitejs/plugin-react": "catalog:",
+    "eslint": "catalog:",
     "jsdom": "catalog:",
-      "tailwindcss": "catalog:",
+    "tailwindcss": "catalog:",
     "vite": "catalog:",
     "vitest": "catalog:"
   },
