fix: lint command in template

--- a/plop-templates/ui/package.json.hbs
+++ b/plop-templates/ui/package.json.hbs
@@ -20,7 +20,7 @@
   "scripts": {
     "build": "tailwindcss -i src/style.css -o dist/style.css",
     "test": "vitest",
-    "lint": "eslint --cache --cache-location=node_modules/.cache/eslint --fix --ext .ts,.tsx src/",
+    "lint": "eslint --cache --cache-location=node_modules/.cache/eslint --fix src/",
     "storybook": "storybook dev -p 6006",
     "build:storybook": "storybook build"
   },
