chore: apply fixes for package json

--- a/plop-templates/feature/package.json.hbs
+++ b/plop-templates/feature/package.json.hbs
@@ -10,12 +10,10 @@
   ],
   "exports": {
     ".": {
-      "import": "src/index.ts",
+      "import": "dist/index.ts",
       "require": "src/index.ts"
     }
   },
-  "module": "./src/index.ts",
-  "types": "./src/index.ts",
   "type": "module",
   "scripts": {
     "build:css": "tailwindcss -i src/style.css -o dist/style.css",
