--- a/plop-templates/package/shared-logic/package.json.hbs
+++ b/plop-templates/package/shared-logic/package.json.hbs
@@ -8,7 +8,7 @@
   ],
   "exports": {
     ".": {
-      "default": "src/index.js",
+      "default": "dist/index.js",
       "types": "src/index.ts"
     }
   },
