--- a/plop-templates/package/ui/package.json.hbs
+++ b/plop-templates/package/ui/package.json.hbs
@@ -10,7 +10,7 @@
   ],
   "exports": {
     ".": {
-      "default": "src/index.js",
+      "default": "dist/index.js",
       "types": "src/index.ts"
     }
   },
