chore: apply valid exports style

--- a/plop-templates/feature/package.json.hbs
+++ b/plop-templates/feature/package.json.hbs
@@ -10,8 +10,10 @@
   ],
   "exports": {
     ".": {
-      "import": "dist/index.ts",
-      "require": "src/index.ts"
+      "import": {
+        "default": "dist/index.js",
+        "types": "src/index.ts"
+      }
     }
   },
   "type": "module",
