--- a/plop-templates/package/shared-logic/package.json.hbs
+++ b/plop-templates/package/shared-logic/package.json.hbs
@@ -8,8 +8,10 @@
   ],
   "exports": {
     ".": {
-      "default": "dist/index.js",
-      "types": "src/index.ts"
+      "import": {
+        "default": "dist/index.js",
+        "types": "dist/index.d.ts"
+      }
     }
   },
   "scripts": {
