--- a/plop-templates/package/ui/package.json.hbs
+++ b/plop-templates/package/ui/package.json.hbs
@@ -10,8 +10,10 @@
   ],
   "exports": {
     ".": {
-      "default": "dist/index.js",
-      "types": "src/index.ts"
+      "import": {
+        "default": "dist/index.js",
+        "types": "dist/index.d.ts"
+      }
     }
   },
   "type": "module",
