fix: add package to template for building storybook

--- a/plop-templates/package/ui/package.json.hbs
+++ b/plop-templates/package/ui/package.json.hbs
@@ -50,7 +50,8 @@
     "tailwindcss": "catalog:",
     "vite": "catalog:",
     "vitest": "catalog:",
-    "typescript": "catalog:"
+    "typescript": "catalog:",
+    "react-dom": "catalog:"
   },
   "dependencies": {
     "clsx": "catalog:",
