--- a/plop-templates/package/ui/package.json.hbs
+++ b/plop-templates/package/ui/package.json.hbs
@@ -41,6 +41,7 @@
     "@storybook/react-vite": "catalog:",
     "@testing-library/react": "catalog:",
     "@vitejs/plugin-react": "catalog:",
+    "@types/react": "catalog:",
     "concurrently": "catalog:",
     "eslint": "catalog:",
     "jsdom": "catalog:",
