fix: order of import configuration

--- a/plop-templates/feature/package.json.hbs
+++ b/plop-templates/feature/package.json.hbs
@@ -8,8 +8,8 @@
   "exports": {
     ".": {
       "import": {
-        "default": "dist/index.js",
-        "types": "src/index.ts"
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
       }
     }
   },
