chore: add lacked package for template

--- a/plop-templates/feature/package.json.hbs
+++ b/plop-templates/feature/package.json.hbs
@@ -47,7 +47,8 @@
     "tailwindcss": "catalog:",
     "vite": "catalog:",
     "vitest": "catalog:",
-    "typescript": "catalog:"
+    "typescript": "catalog:",
+    "@types/react": "catalog:"
   },
   "dependencies": {
     "clsx": "catalog:",
