fix: template to generate component

--- a/plop-templates/package/ui/component.hbs
+++ b/plop-templates/package/ui/component.hbs
@@ -1,6 +1,6 @@
 export interface Props {
 }
 
-export const {{camelCase name}} = function {{camelCase name}}(props: Props) {
+export const {{pascalCase name}} = function {{pascalCase name}}(props: Props) {
 return null;
 };
