--- a/plop-templates/package/ui/component.stories.hbs
+++ b/plop-templates/package/ui/component.stories.hbs
@@ -1,12 +1,12 @@
 import type { Meta, StoryObj } from "@storybook/react";
 
-import { {{camelCase name}} } from "./{{name}}";
+import { {{pascalCase name}} } from "./{{name}}";
 
 const meta = {
-  title: "UI/{{camelCase name}}",
-  component: Icon,
+  title: "UI/{{pascalCase name}}",
+  component: {{pascalCase name}},
   tags: ["autodocs"],
-} satisfies Meta<typeof {{camelCase name}}>;
+} satisfies Meta<typeof {{pascalCase name}}>;
 
 export default meta;
 type Story = StoryObj<typeof meta>;
